Collision and (inefficient) coloring.