@@ -2,6 +2,7 @@ package game.tile.arena.entity;
 
 import com.badlogic.gdx.graphics.g2d.SpriteBatch;
 
+import game.tile.arena.entity.projectile.Projectile;
 import game.tile.arena.sprite.EntitySprite;
 import game.tile.arena.util.Position;
 
@@ -17,15 +18,20 @@ public abstract class Entity implements Comparable<Entity> {
     protected int lastDir;
     protected float speed;
 
-    public Entity(String filePrefix, Position p) {
-        this(filePrefix, p, 166);
+    protected boolean hit = false;
+
+    public final boolean orientation;
+
+    public Entity(String filePrefix, Position p, boolean o) {
+        this(filePrefix, p, 166, o);
     }
 
-    public Entity(String filePrefix, Position p, int animSpeed) {
-        sprite = new EntitySprite(filePrefix, animSpeed);
+    public Entity(String filePrefix, Position p, int animSpeed, boolean o) {
+        sprite = new EntitySprite(filePrefix, animSpeed, 64);
         pos = p;
         dir = 1;
         speed = 1f/2f;
+        orientation = o;
     }
 
     public abstract void update(int delta);
@@ -33,13 +39,24 @@ public abstract class Entity implements Comparable<Entity> {
 
     public void render(SpriteBatch batch, int delta) {
         sprite.setDirection(dir);
-        if (pos.inView(16))
-            sprite.render(batch, (int)(delta/2d + dpos.magnitude()/100d*16d), pos);
+        if (pos.inView(16)) {
+            if (hit)
+                batch.setColor(0.5f, 0f, 0f, 1f);
+            else
+                batch.setColor(1f, 1f, 1f, 1f);
+            sprite.render(batch, (int) (delta / 2d + dpos.magnitude() / 100d * 16d), pos);
+        }
+        hit = false;
+    }
+
+    public boolean isCollision(Projectile p) {
+        return sprite.isCollision(p, pos);
     }
 
     @Override
     public int compareTo(Entity other) {
-        return new Float(pos.y).compareTo(other.pos.y);
+        //return Float.valueOf(pos.y).compareTo(other.pos.y);
+        return hit == other.hit ? 0 : (hit?1:-1);
     }
 
     public void updatePosition(Position dp) {
